force-app/main/default/objects/Lead_Assignment__c/Lead_Assignment__c.object-meta.xml
<CustomObject>
    <description>Object used to manage the Lead Assignment Rules. Sales Ops Administrators will be able to maintain the assignments within Production</description>
    <label>Lead Assignment</label>
    <nameField>
        <displayFormat>LA-{00}</displayFormat>
        <label>Lead Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>