force-app/main/default/objects/Lead_Assignment__c/fields/Lead_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Interest__c</fullName>
    <description>Used to map to the Lead Interest of the Lead</description>
    <label>Lead Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advantage+ Software</fullName>
            </value>
            <value>
                <fullName>AVImark Software</fullName>
            </value>
            <value>
                <fullName>eVetPractice</fullName>
            </value>
            <value>
                <fullName>ImproMed Equine Software</fullName>
            </value>
            <value>
                <fullName>ImproMed Software</fullName>
            </value>
            <value>
                <fullName>Practice Management Software</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Sparkline</fullName>
            </value>
            <value>
                <fullName>Rapport</fullName>
            </value>
            <value>
                <fullName>Reminder Cards</fullName>
            </value>
            <value>
                <fullName>Vetstreet</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Client Recapture</fullName>
            </value>
            <value>
                <fullName>Data Backup</fullName>
            </value>
            <value>
                <fullName>Pet ID</fullName>
            </value>
            <value>
                <fullName>Social Management</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Online Academy</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>RxWorks</fullName>
            </value>
            <value>
                <fullName>VisionVPM</fullName>
            </value>
            <value>
                <fullName>RoboVet</fullName>
            </value>
            <value>
                <fullName>Ventana</fullName>
            </value>
            <value>
                <fullName>Healthy Pet Magazine</fullName>
            </value>
            <value>
                <fullName>Healthy Pet Magazine Seasonals</fullName>
            </value>
            <value>
                <fullName>AVImark</fullName>
                <isActive>false</isActive>
                <label>AVImark</label>
            </value>
            <value>
                <fullName>ImproMed</fullName>
                <isActive>false</isActive>
                <label>ImproMed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>