force-app/main/default/objects/Lead_Assignment__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practice Management Software</fullName>
            </value>
            <value>
                <fullName>Client Communication</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Data Back-up</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>DragonFly</fullName>
            </value>
            <value>
                <fullName>Paper Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>