force-app/main/default/objects/Lead_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Interest__c</columns>
    <columns>State__c</columns>
    <columns>Lead_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assignments</label>
</ListView>